Development
	libgmtk - gmtk_output_combo_box, fix memory leak
	Hide fullscreen controls, when active workspace switches Issue #488
	libgmtk - gmtk_output_combo_box, store pulse audio device index id and add getter
	Fix Issue 486, set user agent to something other than Mozilla/x
	Set softvol on by default when not using ALSA Volume
	Run make indent, after changing indent line length from 100 to 120
	gui.c - Update mixer selection dialog when output device changes
	libgmtk - gmtk_output_combo_box, add get_active_card method
	libgmtk - gmtk_output_combo_box, add get_active_type method
	libgmtk - add make indent and make cppcheck to the Makefile
	libgmtk - run make indent
	libgmtk - gmtk_output_combo_box, use enums instead of hardcoded values
	libgmtk - gmtk_media_player, add softvol support
	libgmtk - gmtk_media_player, crash protection fixes
	libgmtk - gmtk_media_player, wait for mplayer thread to be dead when setting state to quit
	Add Prev and Next dbus methods Issue #483, using modified patch in Issue
	Try and account for device names that are not null but zero characters long
	Fix --fullscreen flag not putting window actually in fullscreen
	Add ALSA and PulseAudio to output selected when ALSA or Pulse support not enabled
	Fix crash, coming out of pause state
	Code cleanups
	Drop en translation as it is redundant
	Update translations for new text "Default"
	Enhance gmtk_output_combo_box to list PulseAudio devices, when PulseAudio support enabled
	Add in some Generic mplayer AO devices to the selector
	Fix status icon from showing up multiple times (after config apply)
	Intergrate gmtk_output_combo_box into preference screen. Allows easy switching between ALSA device
		will be enhanced to provide pulse devices soon.
	Allow gmtk_output_combo_box to compile without alsa
	Fix merged in enums so code compiles
	Add new widgets to source code, gmtk_media_player and gmtk_output_combo_box