@@ -1,16 +1,16 @@
 /* -*- Mode: C; indent-tabs-mode: t; c-basic-offset: 4; tab-width: 4 -*- */
 /*
- * gmlib.h
+ * gm_audio.c
  * Copyright (C) Kevin DeKorte 2006 <kdekorte@gmail.com>
  * 
- * gmlib.h is free software.
+ * gm_audio.c is free software.
  * 
  * You may redistribute it and/or modify it under the terms of the
  * GNU General Public License, as published by the Free Software
  * Foundation; either version 2 of the License, or (at your option)
  * any later version.
  * 
- * gmlib.h is distributed in the hope that it will be useful,
+ * gm_audio.c is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  * See the GNU General Public License for more details.
@@ -21,10 +21,3 @@
  * 	51 Franklin Street, Fifth Floor
  * 	Boston, MA  02110-1301, USA.
  */
-
-#include "gm_audio.h"
-#include "gm_file.h"
-#include "gm_parse.h"
-#include "gm_pref_store.h"
-#include "gm_strfuncs.h"
-
